--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <button id="button">Click to see my Education</button>
+    <button id="button" type="button">Click to see my Education</button>
     <script>
     (function () {
         var httpRequest;
