--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script>
     (function () {
         var httpRequest;
-        document.getElementById("button").onclick = function() { makeRequest('https://api.jsonbin.io/b/60c79aef98ca6c704eafead4');
+        document.getElementById("button").onclick = function() { makeRequest('my_college_degrees.json');
         };
         function makeRequest(url) {
             httpRequest = new XMLHttpRequest();
