--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <button id="button" button="type">Click to see my Education</button>
+    <script src= "js/data.js"></script>
     <script>
     (function () {
         var httpRequest;
