--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script>
     (function () {
         var httpRequest;
-        document.getElementById("button").onclick = function() { makeRequest('data.js');
+        document.getElementById("button").onclick = function() { makeRequest('my_college_degrees.json');
         };
         function makeRequest(url) {
             httpRequest = new XMLHttpRequest();
